--- a/MugC/README
+++ b/MugC/README
@@ -13,7 +13,7 @@ kenzhao100@hotmail.com
 
 
 All rights reserved.
-This file is part of MugC. For details, see http://gallium.gsu.edu:8080/mugcarbonweb. Please also read this file.  Additional BSD Notice.
+This file is part of MugC.  Additional BSD Notice.
 Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  Redistributions of source code must retain the above copyright notice, this list of conditions and the disclaimer below.
  Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the disclaimer (as noted below) in the documentation and/or other materials provided with the distribution.
